Connecting frontend to backend, login, database.
